feat: Integrate MarkdownIt and update theme styling
Replaces the `marked` library with `markdown-it` for improved Markdown rendering capabilities.

Introduces basic light and dark mode background styling to the `index.html` for a more refined user experience.

Updates the `types.ts` file to include additional properties for `User` and `Activity`, enhancing data structure for future features.

Removes unused constants related to gamification elements (crown, points, level up, achievements) from `constants.tsx`, streamlining the configuration.

Also refactors the `Header` component to use a more generic `ViewType` for navigation and cleans up imports and type definitions throughout the application.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     <style>
       body {
         font-family: 'Inter', sans-serif;
+        /* Light mode background */
+        background-color: #f1f5f9; /* slate-100 */
+        transition: background-color 0.3s ease-in-out;
+      }
+      html.dark body {
+        /* Dark mode background */
+        background-color: #0f172a; /* slate-900 */
       }
     </style>
   <script type="importmap">
@@ -21,13 +28,14 @@
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.27.0",
-    "marked": "https://aistudiocdn.com/marked@^16.4.1"
+    "marked": "https://aistudiocdn.com/marked@^16.4.1",
+    "markdown-it": "https://aistudiocdn.com/markdown-it@^14.1.0"
   }
 }
 </script>
 <script>
     // On page load or when changing themes, best to add inline in `head` to avoid FOUC
-    if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+    if (localStorage.theme === 'dark') {
       document.documentElement.classList.add('dark')
     } else {
       document.documentElement.classList.remove('dark')
