--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://resource.trickle.so/vendor_lib/unpkg/lucide-static@0.516.0/font/lucide.css" rel="stylesheet">
     <style>
       body {
         font-family: 'Inter', sans-serif;
@@ -60,6 +61,11 @@
             'fade-in': 'fade-in 0.5s ease-in-out',
             'pulse-logo': 'pulse-logo 2.5s cubic-bezier(0.4, 0, 0.6, 1) infinite',
             'slide-up-out': 'slide-up-out 0.7s cubic-bezier(0.4, 0, 0.2, 1) forwards',
+            'orbit-1': 'orbit-1 3s linear infinite',
+            'orbit-2': 'orbit-2 3s linear infinite',
+            'orbit-3': 'orbit-3 3s linear infinite',
+            'pulse-glow': 'pulse-glow 2s ease-in-out infinite',
+            'rotate-center': 'rotate-center 4s linear infinite',
           },
           keyframes: {
             'fade-in-down': {
@@ -94,6 +100,26 @@
                 opacity: '0',
               },
             },
+            'orbit-1': {
+                '0%': { transform: 'rotate(0deg) translateX(80px) rotate(0deg)' },
+                '100%': { transform: 'rotate(360deg) translateX(80px) rotate(-360deg)' }
+            },
+            'orbit-2': {
+                '0%': { transform: 'rotate(120deg) translateX(80px) rotate(-120deg)' },
+                '100%': { transform: 'rotate(480deg) translateX(80px) rotate(-480deg)' }
+            },
+            'orbit-3': {
+                '0%': { transform: 'rotate(240deg) translateX(80px) rotate(-240deg)' },
+                '100%': { transform: 'rotate(600deg) translateX(80px) rotate(-600deg)' }
+            },
+            'pulse-glow': {
+                '0%, 100%': { opacity: '0.6', transform: 'scale(1)' },
+                '50%': { opacity: '1', transform: 'scale(1.1)' }
+            },
+            'rotate-center': {
+                '0%': { transform: 'rotate(0deg)' },
+                '100%': { transform: 'rotate(360deg)' }
+            }
           }
         }
       }
